--- a/.gitignore
+++ b/.gitignore
@@ -14,10 +14,10 @@
 
 # production
 /build
+/out
 
 # misc
 .DS_Store
-*.pem
 
 # debug
 npm-debug.log*
@@ -29,6 +29,3 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
-
-# vercel
-.vercel
