--- a/package.json
+++ b/package.json
@@ -2,18 +2,19 @@
   "name": "webmirasol",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "export": "next export",
+    "start": "cross-env NODE_ENV=production node server.js"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
+    "cross-env": "^7.0.3",
     "next": "12.0.9",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
-  },
-  "devDependencies": {
-    "eslint": "8.7.0",
-    "eslint-config-next": "12.0.9"
+    "react-bootstrap": "^2.1.1",
+    "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "sass": "^1.49.0"
   }
 }
