--- a/package.json
+++ b/package.json
@@ -2,19 +2,22 @@
   "name": "webmirasol",
   "private": true,
   "scripts": {
-    "dev": "node server.js",
+    "dev": "next dev",
     "build": "next build",
-    "export": "next export",
-    "start": "cross-env NODE_ENV=production node server.js"
+    "start": "next start"
   },
+  "keywords": [],
+  "author": "Jose A. Carneiro",
+  "license": "ISC",
   "dependencies": {
-    "bootstrap": "^5.1.3",
-    "cross-env": "^7.0.3",
-    "next": "12.0.9",
-    "react": "17.0.2",
-    "react-bootstrap": "^2.1.1",
-    "react-dom": "17.0.2",
-    "react-icons": "^4.3.1",
-    "sass": "^1.49.0"
+    "bootstrap": "^5.2.3",
+    "next": "^13.3.1",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
+    "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0"
+  },
+  "devDependencies": {
+    "sass": "^1.62.1"
   }
 }
